--- a/themes/SIR2skin/default/_footer.twig
+++ b/themes/SIR2skin/default/_footer.twig
@@ -1,6 +1,13 @@
-    <hr>
+        <div id="footer">
+            <div class="wrap">
+                <a href="https://www.rediris.es/sir2">
+                    <img src="/module.php/sir2skin/icons/logo-fed-sir2.png" alt="Small fish logo" style="float: right" />
+                </a>
+                <img src="/module.php/sir2skin/icons/ssplogo-fish-small.png" alt="Small fish logo" style="float: right" />        
 
-    <img src="/{{ baseurlpath }}resources/icons/ssplogo-fish-small.png" alt="Small fish logo" style="float: right">
-    Copyright © 2007-2016 <a href="http://uninett.no/">UNINETT AS</a>
-
-    <br style="clear: right">
+                Copyright &copy; {{ "now"|date("Y") }} <a href="http://www.tuorganizacion.es/">Tu organización</a>
+                
+                <br style="clear: right" />
+            </div>
+        
+        </div><!-- #footer -->
