--- a/themes/SIR2skin/default/_header.twig
+++ b/themes/SIR2skin/default/_header.twig
@@ -1,23 +1,78 @@
-<div id="header">
-    <img src="/module.php/sir2skin/logo-transp.png" align="left" valign="top" alt="SIR" height="60px">
-    <h1><a style="text-decoration: none; color: #3d8e9c; font-weight: bold; padding-left: 32px;" href="{{ baseurlpath }}">{{ pagetitle }}</a></h1>
-</div>
+        <div id="header">
+            <div class="wrap">
+                <div class="left">
+                    <div class="v-center logo-header">
+                        <div>
+                            <img src="/module.php/sir2skin/logo-transp.png" align="left" valign="top" alt="SIR" height="60px">
+                        </div>
+                    </div>
+                </div>
+                <div class="left">
+                    <div class="v-center logo-header">
+                        <div>
+                            <h1><a style="text-decoration: none; color: #3d8e9c; font-weight: bold;" href="{{ baseurlpath }}">{{ pagetitle }}</a></h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="right">
+                    <a href="#menu" id="menuLink" class="menu-link hide-for-large">
+                        <!-- Hamburger icon -->
+                        <span class="fa fa-language fa-2x" aria-hidden="true"></span>
+                    </a>
+                </div>
 
-{% if not hideLanguageBar %}
-<div id="languagebar">
-    {% for lang in languageBar %}
-        {%- if not loop.first -%}|{% endif -%}
-        {% if lang.url %}
-            <a href="{{ lang.url -}}
-            {%- if queryParams %}&{% endif -%}
-            {%- for name, value in queryParams -%}
-                {%- if not loop.first %}&{% endif -%}
-                {%- if value %}{{ name }}={{ value }}{% else %}{{ name }}{% endif -%}
-            {%- endfor %}">{{ lang.name }}</a>
-        {% else %}
-            {{ lang.name }}
-        {% endif %}
+                {% if not hideLanguageBar -%}
+                    <div id="languagebar">
+                        <div id="menu">
+                            <div class="pure-menu">
+                                <ul class="pure-menu-list">
+                                {% for key, lang in languageBar -%}
+                                    {% if key == currentLanguage -%}
+                                    <a class="pure-menu-heading" href="#">{{ lang.name }}</a>
+                                    {% else -%}
+                                    {% if lang.url -%}
+                                    <li class="pure-menu-item"><a href="{{ lang.url }}{%- spaceless %}
+                                        {% if queryParams -%}&{% endif -%}
+                                        {% for name, value in queryParams -%}
+                                            {%- if not loop.first %}&{% endif -%}
+                                            {%- if value %}{{ name }}={{ value }}{% else %}{{ name }}{%- endif %}
+                                        {%- endfor %}"{% endspaceless %} class="pure-menu-link">{{ lang.name }}</a></li>
+                                    {% endif -%}
+                                {% endif -%}
+                            {% endfor -%}
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                {%- endif %}
 
-    {% endfor %}
-</div>
-{% endif %}
+                <div class="right show-for-large">
+                    <div class="v-center language-bar">
+                        <form id="SelectLang" class="pure-form" method="get">
+                            {% if not hideLanguageBar -%}
+                            <div id="languagebar">
+                            {% for name, value in queryParams -%}
+                                {% if value -%}
+                                <input type="hidden" name="{{ name }}" value="{{ value }}" />
+                                {%- else -%}
+                                <input type="hidden" name="{{ name }}" />
+                                {%- endif -%}
+                            {%- endfor %}
+
+                                <select  class="pure-input-1-4 language-menu selectize" name="language" id="language_selector">
+                                    {% for key, lang in languageBar -%}
+                                    {% if key == currentLanguage -%}
+                                    <option value="{{ key }}" selected="selected">&#xf1ab;  {{ lang.name }}</option>
+                                    {% else -%}
+                                    <option value="{{ key }}">{{ lang.name }}</option>
+                                    {% endif -%}
+                                {% endfor -%}
+                                </select>
+                            </div>
+                        {% endif -%}
+                        </form>
+                    </div> <!--language-bar-->
+                </div><!--show-for-large-->
+            </div> <!-- wrap -->
+        </div> <!-- header -->
+
