--- a/www/sir.css
+++ b/www/sir.css
@@ -1,27 +1,3 @@
-/* these styles are in the head of this page because this is a unique page */
-
-/* THE BIG GUYS */
-* {
-	margin: 0;
-	padding: 0;
-}
-
-body {
-	text-align: center;
-	padding: 10px 0;
-        background: #d5d5d5 url(//www.rediris.es/template/w4/mm/wb4_body_bg.gif) repeat-x scroll left top;
-/*	background-image: url(icons/ssplogo-fish.png);
-	background-repeat: no-repeat; */
-	color: #333;
-	font: 83%/1.5 arial,tahoma,verdana,sans-serif;
-}
-
-.body-embed {
-	padding: 0;
-	background: #ffffff;
-	font: 83%/1.5 arial,tahoma,verdana,sans-serif;
-}
-
 img {
 	border: none;
 	display: block;
@@ -84,59 +60,36 @@ dt {
 	font-weight: bold;
 }
 
-#wrap {
-	background: #fff;
-	
-	padding: 15px;
-	border: 1px solid #d6d6d6;
-	position: relative;
-	text-align: left;
-	
-	margin: 20px 75px 2em 75px;
-	max-width: 90%;
-}
-
-#languagebar {
-	padding-left: 10px;
-	padding-right: 10px;
-        text-align: right;
-}
-#languagebar a:link, #languagebar a:visited {
-	text-decoration: none;
-	color: #777;
-	border-bottom: 1px dotted #ccc;
-	font-weight: normal;
-}
-#languagebar a:hover {
-	text-decoration: none;
-	color: #333;
-	border-bottom: 1px solid #333;
-	
-}
-
 #header {
 	background: #fff url("header-bkg-rediris.png") repeat-x 0 100%;
-	margin: 0px;
-	padding: 0 0 8px;
 }
 
-#header h1 {
-	color: #fff;
-	font-size: 145%;
+#header .logo-header>div{
+	display: inline-flex;
+}
+
+#header h1{
+	margin: 0;
+	font-size: 24px;
+}
+
+#footer {
+	background: none;
+	border-top: 1px solid #DDD;
+	text-align: left;
+}
+
+#logo span {
+	color: #3d8e9c;
 	padding-top: 30px;
 	padding-right: 10px;
 	padding-bottom: 12px;
 	padding-left: 10px;
 }
 
-
-#content, #footer {
-	padding: 0 20px;
-}
-
 /* TYPOGRAPHY */
 p, ul, ol {
-	margin: 0 0 1.5em;
+	margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -144,35 +97,36 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: arial,verdana,sans-serif;
 	margin: 1.2em 0 .3em;
 	color: #000;
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid #ccc;
 	padding-bottom: .1em;
 }
 
 h1 {
-	font-size: 196%;
+	font-size: 32px;
 	margin-top: 0;
 	border: none;
 }
 
 h2 {
-	font-size: 136%;
+	font-size: 28px;
 }
 
 h3 {
-	font-size: 126%;
+	font-size: 24px;
 }
 
 h4 {
-	font-size: 116%;
+	font-size: 20px;
 	font-weight: bold;
 }
 
 h5 {
-	font-size: 106%;
+	font-size: 16px;
 }
 
 h6 {
-	font-size: 96%;
+	font-size: 12px;
+	font-weight: bold;
 }
 
 h1 a {
@@ -183,10 +137,6 @@ h1 a {
 
 h1 a:hover {
 	border-bottom: 1px dotted #eee;
-}
-
-#content {
-	margin-top: 2em;
 }
 
 .old {
@@ -201,6 +151,14 @@ dl dd {
 	color: #666;
 	margin-left: 3em;
 /*	font-family: monospace; */
+}
+
+.pure-menu li.pure-menu-selected a.pure-menu-link{
+   	color: #298F9B;
+}
+
+.pure-menu a.pure-menu-link{
+   	color: #000;
 }
 
 .efieldlist {
@@ -332,6 +290,7 @@ fieldset.fancyfieldset {
 	margin: 2em 1em 1em 0px;
 	border: 1px solid #bbb;
 }
+
 fieldset.fancyfieldset legend {
 	margin-left: 2em;
 	padding: 3px 2em 3px 2em;
@@ -363,38 +322,72 @@ caption {
 	display: none;
 }
 
-@media handheld, only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
-	#header, #languagebar, #footer, .erroricon, #loginicon, .logintext, #regularsubmit {
-		display: none;
-	}
-	body {
-		font-size: 20px;
-	}
-	#wrap {
-		margin: 0;
-	}
-	h1,h2,h3,h4 {
-		font-size: 110%;
-	}
-		
-	#content {
-		margin-bottom: 10px;
-		padding: 0;
-		padding-left: 5px;
-	}
-	input[type="text"], input[type="password"] {
-		height: 1.5em;
-		font-size: 1em;
-	}
-	#mobilesubmit {
-		display: inline;
-	}
-	.youareadmin {
-		font-size: 50%;
-	}
+
+/* FORMS */
+
+input, select {
+    vertical-align:middle;
 }
-.btn img,
-.btnaddonright img {
-	max-height: 15px;
-	max-width: 15px;
+
+input[type="submit"], ul.langSelect, div.example{
+	float: right;
 }
+
+label, span.example{
+	margin: 10px 0 0 0;
+}
+
+.pure-form input[type="password"], .pure-form input[type="email"], .pure-form input[type="url"], .pure-form input[type="date"], .pure-form input[type="month"], .pure-form input[type="time"], .pure-form input[type="datetime"], .pure-form input[type="datetime-local"], .pure-form input[type="week"], .pure-form input[type="tel"], .pure-form input[type="color"], .pure-form input[type="number"], .pure-form input[type="search"], .pure-form input[type="text"].pure-form input, .pure-form textarea, .pure-form select, input, button, textarea, select {
+	height: 30px;
+	border: 1px solid #298f9b;
+	margin: 5px 0 0 0;
+	display: inline-block;
+	box-shadow: inset 0 1px 3px #8abfb3;
+	vertical-align: middle;
+	padding: 0 5px;
+}
+
+.pure-form textarea, textarea{
+	height: auto;
+}
+
+input[type="submit"], input[type="button"], button, .pure-button-red{
+	width: auto;
+	background: #298f9b;
+	border: 1px solid #298f9b;
+	cursor: pointer;
+	color: #f4d502;
+	box-shadow: 0 3px #999;
+}
+
+input[type="submit"]:hover, input[type="button"]:hover, button:hover, .pure-button-red:hover{
+	background-color: #14555d;
+}
+
+input[type="submit"]:active, input[type="button"]:active, button:active, .pure-button-red{
+	box-shadow: 0 1px #999;
+	transform: translateY(2px);
+}
+
+
+span.example{
+	margin-left: 10px;
+	font-size: 13px;
+	font-style: italic;
+	color: gray;
+}
+
+.idpinstaller_step:after{
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.pure-button-red{
+	background
+}
+
+.pure-button{
+	padding: 0 5px;
+}
+
