--- a/www/sir.css
+++ b/www/sir.css
@@ -337,7 +337,7 @@ label, span.example{
 	margin: 10px 0 0 0;
 }
 
-.pure-form input[type="password"], .pure-form input[type="email"], .pure-form input[type="url"], .pure-form input[type="date"], .pure-form input[type="month"], .pure-form input[type="time"], .pure-form input[type="datetime"], .pure-form input[type="datetime-local"], .pure-form input[type="week"], .pure-form input[type="tel"], .pure-form input[type="color"], .pure-form input[type="number"], .pure-form input[type="search"], .pure-form input[type="text"].pure-form input, .pure-form textarea, .pure-form select, input, button, textarea, select {
+.pure-form input[type="password"], .pure-form input[type="email"], .pure-form input[type="url"], .pure-form input[type="date"], .pure-form input[type="month"], .pure-form input[type="time"], .pure-form input[type="datetime"], .pure-form input[type="datetime-local"], .pure-form input[type="week"], .pure-form input[type="tel"], .pure-form input[type="color"], .pure-form input[type="number"], .pure-form input[type="search"], .pure-form input[type="text"].pure-form input, .pure-form textarea, input, button, textarea {
 	height: 30px;
 	border: 1px solid #298f9b;
 	margin: 5px 0 0 0;
