Mejoras y modificaciones CSS y responsive

--- a/themes/SIR2skin/default/_footer.twig
+++ b/themes/SIR2skin/default/_footer.twig
@@ -1,13 +1,23 @@
         <div id="footer">
             <div class="wrap">
-                <a href="https://www.rediris.es/sir2">
-                    <img src="/module.php/sir2skin/icons/logo-fed-sir2.png" alt="Small fish logo" style="float: right" />
-                </a>
-                <img src="/module.php/sir2skin/icons/ssplogo-fish-small.png" alt="Small fish logo" style="float: right" />        
 
-                Copyright &copy; {{ "now"|date("Y") }} <a href="http://www.tuorganizacion.es/">Tu organización</a>
-                
-                <br style="clear: right" />
+                <div id="footer-organization" class="left">
+                    <p>Copyright &copy; {{ "now"|date("Y") }} <a href="http://www.tuorganizacion.es/">Tu organización</a></p>
+                </div>
+
+                <div id="footer-sir2" class="right">
+                    <a href="https://www.rediris.es/sir2">
+                        <img src="/module.php/sir2skin/icons/logo-fed-sir2.png" alt="Small fish logo" />
+                    </a>
+                </div>
+
+                <div id="footer-simplesamlphp" class="right">
+                    <img src="/module.php/sir2skin/icons/ssplogo-fish-small.png" alt="Small fish logo" />   
+                </div>
+
+               
+
+                <br style="clear: both" />
             </div>
         
         </div><!-- #footer -->
