--- a/themes/SIR2skin/default/_header.twig
+++ b/themes/SIR2skin/default/_header.twig
@@ -1,77 +1,60 @@
         <div id="header">
             <div class="wrap">
-                <div class="left">
+                <div style="max-width:20%" class="left">
                     <div class="v-center logo-header">
                         <div>
-                            <img src="/module.php/sir2skin/logo-transp.png" align="left" valign="top" alt="SIR" height="60px">
+                            <img src="/module.php/sir2skin/logo-transp.png" align="left" class="logo" valign="top" alt="SIR" height="60px">
                         </div>
                     </div>
                 </div>
-                <div class="left">
+                <div style="max-width:60%" class="left title-desktop">
                     <div class="v-center logo-header">
                         <div>
-                            <h1><a style="text-decoration: none; color: #3d8e9c; font-weight: bold;" href="{{ baseurlpath }}">{{ pagetitle }}</a></h1>
+                            <h1 class="pagetitle"><a style="text-decoration: none; color: #3d8e9c; font-weight: bold;" href="{{ baseurlpath }}">{{ pagetitle }}</a></h1>
                         </div>
                     </div>
                 </div>
-                <div class="right">
-                    <a href="#menu" id="menuLink" class="menu-link hide-for-large">
-                        <!-- Hamburger icon -->
-                        <span class="fa fa-language fa-2x" aria-hidden="true"></span>
-                    </a>
-                </div>
-
+                {% if sir.idpinstaller != true %}
+                    <div style="max-width:20%" class="right">
+                        <a href="#main-menu" data-target="main-menu" id="menuLinkBar" class="menu-link hide-for-large">
+                            <span class="fa fa-bars fa-2x" aria-hidden="true"></span>
+                        </a>
+                    </div>          
+                {% endif %}
                 {% if not hideLanguageBar -%}
-                    <div id="languagebar">
-                        <div id="menu">
-                            <div class="pure-menu">
-                                <ul class="pure-menu-list">
-                                {% for key, lang in languageBar -%}
-                                    {% if key == currentLanguage -%}
-                                    <a class="pure-menu-heading" href="#">{{ lang.name }}</a>
-                                    {% else -%}
-                                    {% if lang.url -%}
-                                    <li class="pure-menu-item"><a href="{{ lang.url }}{%- spaceless %}
-                                        {% if queryParams -%}&{% endif -%}
-                                        {% for name, value in queryParams -%}
-                                            {%- if not loop.first %}&{% endif -%}
-                                            {%- if value %}{{ name }}={{ value }}{% else %}{{ name }}{%- endif %}
-                                        {%- endfor %}"{% endspaceless %} class="pure-menu-link">{{ lang.name }}</a></li>
-                                    {% endif -%}
-                                {% endif -%}
-                            {% endfor -%}
-                                </ul>
-                            </div>
-                        </div>
+                    <div style="max-width:20%" class="right">
+                        <a href="#menu" id="menuLink" data-target="menu" class="menu-link hide-for-large">
+                            <span class="fa fa-language fa-2x" aria-hidden="true"></span>
+                        </a>
                     </div>
-                {%- endif %}
-
-                <div class="right show-for-large">
+                {% endif %}
+                <div style="max-width:20%" class="right show-for-large">
                     <div class="v-center language-bar">
                         <form id="SelectLang" class="pure-form" method="get">
                             {% if not hideLanguageBar -%}
                             <div id="languagebar">
-                            {% for name, value in queryParams -%}
-                                {% if value -%}
-                                <input type="hidden" name="{{ name }}" value="{{ value }}" />
-                                {%- else -%}
-                                <input type="hidden" name="{{ name }}" />
-                                {%- endif -%}
-                            {%- endfor %}
+                                {% for name, value in queryParams -%}
+                                    {% if value -%}
+                                    <input type="hidden" name="{{ name }}" value="{{ value }}" />
+                                    {%- else -%}
+                                    <input type="hidden" name="{{ name }}" />
+                                    {%- endif -%}
+                                {%- endfor %}
 
                                 <select  class="pure-input-1-4 language-menu selectize" name="language" id="language_selector">
                                     {% for key, lang in languageBar -%}
-                                    {% if key == currentLanguage -%}
-                                    <option value="{{ key }}" selected="selected">&#xf1ab;  {{ lang.name }}</option>
-                                    {% else -%}
-                                    <option value="{{ key }}">{{ lang.name }}</option>
-                                    {% endif -%}
-                                {% endfor -%}
+                                        {% if key == currentLanguage -%}
+                                        <option value="{{ key }}" selected="selected">&#xf1ab;  {{ lang.name }}</option>
+                                        {% else -%}
+                                        <option value="{{ key }}">{{ lang.name }}</option>
+                                        {% endif -%}
+                                    {% endfor -%}
                                 </select>
                             </div>
                         {% endif -%}
                         </form>
                     </div> <!--language-bar-->
+                    
                 </div><!--show-for-large-->
             </div> <!-- wrap -->
         </div> <!-- header -->
