--- a/themes/SIR2skin/default/base.twig
+++ b/themes/SIR2skin/default/base.twig
@@ -50,10 +50,10 @@
             {% endif %}
         {% endif %}
     {% endif %}{% endspaceless -%}
+    <script type="text/javascript" src="/module.php/sir2skin/side_menu.js"></script>
     <script type="text/javascript" src="/{{ baseurlpath }}assets/js/lib/clipboard.min.js"></script>
     <script type="text/javascript" src="/{{ baseurlpath }}assets/js/lib/selectize.min.js"></script>
     <script type="text/javascript" src="/{{ baseurlpath }}assets/js/src/language.js"></script>
-    <script type="text/javascript" src="/{{ baseurlpath }}assets/js/src/side_menu.js"></script>
     <script type="text/javascript" src="/{{ baseurlpath }}assets/js/src/script.js"></script>
 {% block postload %}{% endblock %}
 </body></html>
