Modificaciones para dar soporte a la versión TWIG y a la versión PHP indistintamente

--- a/themes/SIR2skin/default/_footer.twig
+++ b/themes/SIR2skin/default/_footer.twig
@@ -6,13 +6,15 @@
                 </div>
 
                 <div id="footer-sir2" class="right">
-                    <a href="https://www.rediris.es/sir2">
+                    <a href="https://www.rediris.es/sir2" style="display:block;">
                         <img src="/module.php/sir2skin/icons/logo-fed-sir2.png" alt="Small fish logo" />
                     </a>
                 </div>
 
                 <div id="footer-simplesamlphp" class="right">
-                    <img src="/module.php/sir2skin/icons/ssplogo-fish-small.png" alt="Small fish logo" />   
+                    <a href="https://simplesamlphp.org/" style="display:block">
+                        <img src="/module.php/sir2skin/icons/ssplogo-fish-small.png" alt="Small fish logo" />   
+                    </a>
                 </div>
 
                
